syntax = "proto3";

option go_package = "proto/pb";

message Void {}

message BookId {
  string id = 1;
}

message Book {
  string id = 1;
  string name = 2;
  string description = 3;
  float medium_price = 4;
  string author = 5;
  string img_url = 6;
}

message BookList {
  repeated Book books = 1;
  BookResponse status = 2;
}

message BookResponse {
  int32 status = 1;
  Book book = 2;
}

service BookService {
  rpc CreateBook (Book) returns (BookResponse);
  rpc FindAllBooks (Void) returns (BookList);
  rpc FindBook (BookId) returns (BookResponse);
  rpc EditBook (Book) returns (BookResponse);
  rpc DeleteBook (BookId) returns (BookResponse);
}